# LogDelta

./: .gitignore  Dockerfile  MANIFEST.in  README.md  config.yml  config2.yml  docker-compose.yaml  log_analysis_functions.py  main.py  pyproject.toml  requirements.txt
demo/: LICENSE  config.yml
demo/demo_detailed/: README.md  demo_anodetect_1.yml  demo_anodetect_2.yml  demo_anodetect_3.yml  demo_anodetect_4.yml  demo_dist_1.yml  demo_dist_2.yml  demo_dist_34.yml  demo_viz_ano_1.yml  demo_viz_ano_2.yml  demo_viz_ano_3.yml  demo_viz_ano_4.yml  demo_viz_app_1.yml  demo_viz_app_2.yml  demo_viz_app_3.yml  demo_viz_app_4.yml  demo_viz_app_ano_1.yml  demo_viz_app_ano_2.yml  demo_viz_app_ano_3.yml  demo_viz_app_ano_4.yml  rename_hadoop.py  rename_hadoop_orig.py
demo/full/: README.md  demo_anodetect_1.yml  demo_anodetect_2.yml  demo_anodetect_3.yml  demo_anodetect_4.yml  demo_dist_1.yml  demo_dist_2.yml  demo_dist_34.yml  demo_viz_ano_1.yml  demo_viz_ano_2.yml  demo_viz_ano_3.yml  demo_viz_ano_4.yml  demo_viz_app_1.yml  demo_viz_app_2.yml  demo_viz_app_3.yml  demo_viz_app_4.yml  demo_viz_app_ano_1.yml  demo_viz_app_ano_2.yml  demo_viz_app_ano_3.yml  demo_viz_app_ano_4.yml  label_hadoop_runs_fixed.py
demo/label_investigation/: 1_viz_file_names.yml  2_viz_run_content.yml  3_ano_run_content.yml  4_ano_line_content.yml  README.md  find_string.py  video_script.md
logdelta/: config_runner.py  log_analysis_functions.py  regex_masking.py
