[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["logdelta*"]

[project]
name = "LogDelta"
version = "0.1.0"
description = "LogDelta - Go Beyond Grepping with NLP-Based Log File Analysis"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Mika Mäntylä", email="mika.mantyla@helsinki.fi"}]
keywords = [
    "logs",
    "anomaly detection",
    "log parsing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging"]

requires-python = ">=3.9,<3.13"
dependencies = [
"loglead >= 1.2.1",
"XlsxWriter"
]

[project.scripts]
config-runner = "package_name.config_runner:main"